--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "author": "MatveevK",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.18.0",
+    "loaders.css": "0.1.2",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-loaders": "3.0.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
