--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-loader-spinner": "1.4.7",
     "react-loaders": "3.0.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
