--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "0.18.0",
+    "formik": "0.11.11",
     "loaders.css": "0.1.2",
     "object-assign": "4.1.0",
     "react": "16.2.0",
@@ -44,7 +45,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.1.0",
     "semantic-ui-css": "2.3.0",
-    "semantic-ui-react": "0.78.3"
+    "semantic-ui-react": "0.78.3",
+    "yup": "0.24.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
